Upload PDFs of templates

--- a/examtemplate.tex
+++ b/examtemplate.tex
@@ -139,6 +139,9 @@ The class file is based on the standard article class file, so commands such as 
 \end{enumerate}
 \end{enumerate}
 
+\end{document}
+
+%% Optional section, if you want to insert solutions at the end of the document to form a mark scheme.
 
 \solutions
 
