--- a/abtemplate.tex
+++ b/abtemplate.tex
@@ -104,8 +104,8 @@ Choose an inline option.
 \item yes
 \item yes
 \item yes
-\item yes
-\item yes
+\noitem %HACK. adds "blank" space so that the items line up as expected
+\noitem
 \end{inlineoptions}
 
 \question[(inline multi-choice)]{25}
