--- a/examtemplate.tex
+++ b/examtemplate.tex
@@ -109,6 +109,20 @@ Choose an inline option.
 \noitem
 \end{inlineoptions}
 
+\question
+Choose an inline option.
+\begin{inlineoptions}[1.5]{3} %optional parameter specifies line spacing
+\item yes
+\item no
+\item maybe
+\item well...
+\item never!
+\item yes
+\item yes
+\item yes
+\noitem %HACK. adds "blank" space so that the items line up as expected
+\end{inlineoptions}
+
 \section{Section title}
 
 The class file is based on the standard article class file, so commands such as section, subsection etc. can all be used if desired.
