--- a/abtemplate.tex
+++ b/abtemplate.tex
@@ -11,6 +11,7 @@
 \abtitle{Title of AB}
 \suppno{WEB 12345 6} %can be omitted for "DRAFT"
 \absubtitle{Optional subtitle} %optional subtitle
+%\optiontext{} %Can be used to change text appearing at top of multi-choice options.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % INSTRUCTIONS ON FIRST PAGE
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -132,6 +133,20 @@ Choose an inline option from three columns.
 \item well...
 \item never!
 \item yes
+\end{inlineoptions}
+
+\question
+Choose an inline option at 1.5 spacing.
+\begin{inlineoptions}[1.5]{3} %optional parameter specifies line spacing
+\item yes
+\item no
+\item maybe
+\item well...
+\item never!
+\item yes
+\item yes
+\item yes
+\noitem %HACK. adds "blank" space so that the items line up as expected
 \end{inlineoptions}
 
 \question[(stupid question)]{25}
