--- a/ouab.cls
+++ b/ouab.cls
@@ -57,8 +57,16 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Title page
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% Footers for title page (copyright, etc)
+\fancypagestyle{frontpage}{%
+  \fancyhf{} % clear all header and footer fields
+  \renewcommand{\headrulewidth}{0pt}
+  \renewcommand{\footrulewidth}{2pt}%
+    \fancyfoot[L]{\textbf{Copyright \copyright\ \@abyear\ The Open University}\hfill \textbf{\@suppno}\\
+\textbf{\@versionno} }%
+}
 \renewcommand{\maketitle}{
-  \thispagestyle{empty}
+  \thispagestyle{frontpage}
   \vspace{2cm}
 \begin{adjustwidth}{0cm}{-4cm}
   \begin{tabular}{@{}p{4.5cm}@{}p{12.5cm}@{}}
@@ -91,11 +99,6 @@
   \raggedright
   \@abinstructions
   \end{adjustwidth}
-  \vfill
-\begin{adjustwidth}{0cm}{-4cm}
-  \rule{17cm}{2pt}
-  \textbf{Copyright \copyright\ \@abyear\ The Open University\hfill \@suppno}
-  \end{adjustwidth}
   \newpage
 }
 
@@ -106,6 +109,7 @@
   \fancyhf{} % clear all header and footer fields
   \renewcommand{\headrulewidth}{0pt}
   \renewcommand{\footrulewidth}{0pt}%
+  \fancyfootoffset[RE,RO]{4cm} % lines up number with marks column
     %\fancyhead[RE, RO]{\textbf\thepage}%
     \fancyfoot[C]{page~\thepage~of~\pageref{LastPage}} % internal right hand pages only
     %\fancyfoot[RE,RO]{\bfseries\thepage}
@@ -180,24 +184,37 @@
 }
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% Options for CMAs
+
+% Options text
+\def\@optiontext{\emph{Options}\par}
+\newcommand\optiontext[1]{%
+  \def\@optiontext{
+    \ifthenelse{\equal{#1}{}}{}{\emph{#1}\par}
+  }
+}
+
 % Inline ones (chops page into columns by using boxes of appropriate widths)
-\def\inlineoptions#1{%
-  \par\medskip\emph{Options}\par
-  \setcounter{enumi}{0}%
-  \dimen0 \linewidth
-  \divide\dimen0 by #1\relax
-  \def\item{\hfil\egroup\penalty50 \hfill
+\newenvironment{inlineoptions}[2][1]{%
+% #1 is the optional line spacing stretch. Default is 1
+% #2 is the number of columns
+  \par\medskip\@optiontext
+    \setcounter{enumi}{0}%
+  \dimen0 \linewidth%
+  \divide\dimen0 by #2\relax%
+  \def\item{\hfil\egroup\penalty50 \hfill%
     \refstepcounter{enumi}%
-    \leavevmode\hbox to \dimen0 \bgroup\protect\makebox[0.7cm][l]{\textbf{\Alph{enumi}}}\space}% 
-  \def\noitem{\hfil\egroup\penalty50 \hfill
+    \def\baselinestretch{#1}%
+    \@currsize
+    \leavevmode\hbox to \dimen0 \bgroup\protect\makebox[0.7cm][l]{\textbf{\Alph{enumi}}}\space }%
+  % Hack to allow "blank" slots at end of final line (or wherever)
+  \def\noitem{\hfil\egroup\penalty50 \hfill%
     \leavevmode\hbox to \dimen0 \bgroup}%
   \leavevmode\bgroup\hskip 0pt plus -1fill %
-}
-\def\endinlineoptions{\hfil\egroup}
+}{\hfil\egroup\par}  
 
 % Normal options: this is just using enumitem features with enumerate.
 \newenvironment{options}%
-	{\par\medskip\emph{Options}\begin{enumerate}[label=\textbf{\Alph*}]}%
+	{\par\medskip\@optiontext\begin{enumerate}[label=\textbf{\Alph*}]}%
 	{\end{enumerate}}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% Experimental mark counter
