--- a/ouab.cls
+++ b/ouab.cls
@@ -1,5 +1,4 @@
 \NeedsTeXFormat{LaTeX2e}
-\ProvidesClass{ouab}[2015/05/22 v0.9 (Robert Brignall, all rights reserved)]
 % Experimental!
 \newif\if@markcheck
 \@markcheckfalse
@@ -11,7 +10,7 @@
 %% Load packages/class file
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \LoadClass[fleqn,12pt,onecolumn,twoside,a4paper]{article}
-\RequirePackage[a4paper,left=2cm,right=6cm,top=1cm,bottom=3cm,marginparwidth=2cm,nohead,asymmetric]{geometry}%
+\RequirePackage[a4paper,left=2cm,right=6cm,top=1cm,bottom=3cm,marginparwidth=2cm,marginparsep=-4ex,nohead,asymmetric]{geometry}%
 \RequirePackage{fancyhdr}
 \RequirePackage{graphicx}
 \RequirePackage{changepage}
@@ -44,7 +43,10 @@
 \newcommand\@abtitle{\@latex@error{No \noexpand\abtitle specified}\@ehc}
 %
 \def\@absubtitle{\relax}
-\newcommand\absubtitle[1]{\DeclareRobustCommand\@absubtitle{#1}}
+\newif\if@subtitle
+\@subtitlefalse
+\newcommand\absubtitle[1]{\DeclareRobustCommand\@absubtitle{#1}\@subtitletrue}
+%
 %
 \def\@abinstructions{No special instructions specified.}
 \newcommand\abinstructions[1]{\DeclareRobustCommand\@abinstructions{#1}}
@@ -81,7 +83,7 @@
 \rule{12.5cm}{1pt}
 
 \bigskip\bigskip\textbf{\Huge \@abtitle}
-\par\bigskip\textbf{\large \@absubtitle}
+\if@subtitle\par\bigskip\textbf{\large \@absubtitle}\fi
 
 \medskip\rule{12.5cm}{1pt}
 
@@ -112,8 +114,6 @@
   \fancyfootoffset[RE,RO]{4cm} % lines up number with marks column
     %\fancyhead[RE, RO]{\textbf\thepage}%
     \fancyfoot[C]{page~\thepage~of~\pageref{LastPage}} % internal right hand pages only
-    %\fancyfoot[RE,RO]{\bfseries\thepage}
-    %\fancyfoot[LE,LO]{\bfseries\@modulecode\ \@exammonth\ \@examyear}  
 }
 \pagestyle{internalpages}
 
@@ -135,7 +135,8 @@
 \def\assignment#1{%
 	\def\@assignmentname{#1} %store name of assignment (tma/cma, etc)
 	  \setcounter{question}{0}
-  	\iffirstassignment\firstassignmentfalse\else\rule{\textwidth}{2pt}\newpage\fi
+	% Draw a rule under end of previous assignment (if not first assignment)
+  	\iffirstassignment\firstassignmentfalse\else\rule{\dimexpr\textwidth+\marginparwidth+\marginparsep}{2pt}\newpage\fi
 	\@ifnextchar[{\@assignmentwithcutoff}{\@assignmentnocutoff}
 }
 
@@ -182,6 +183,7 @@
 	\marginnote{\hfill[\textsl{#1}]}
 	\if@markcheck\addtocounter{marksum}{#1}\fi % experimental	
 }
+\let\mk\marks
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% Options for CMAs
 
@@ -297,7 +299,7 @@
 % Line at end of AB
 \let\@oldenddochook\@enddocumenthook
 \def\@enddocumenthook{%
-\par\bigskip \rule{\textwidth}{2pt}
+\par\bigskip \rule{\dimexpr\textwidth+\marginparwidth+\marginparsep}{2pt}
 \@oldenddochook}
 
 %%
