iCMA template minor fixes
Two minor issues in iCMA template. PDF file also updated.

--- a/icmatemplate.tex
+++ b/icmatemplate.tex
@@ -17,7 +17,7 @@
 % INSTRUCTIONS ON FIRST PAGE
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \instructions{%
-You should be able to answer all questions in iCMA41 after studying 
+You should be able to answer all questions in iCMA~41 after studying 
 Units 1, 2 and 3. There are 15 questions in total. Questions 1 to 5 relate 
 to Unit 1, Questions 6 to 10 relate to Unit 2 and Questions 11 to 15 relate 
 to Unit 3. Before attempting the questions for a particular unit, it may 
@@ -37,7 +37,7 @@ Walton Hall\\
 Milton Keynes\\
 MK7 6AA
 \end{quotation}
-The completed iCMA \emph{must arrive} by the cut­off date. 
+The completed iCMA \emph{must arrive} by the cut-off date. 
 
 You are advised to obtain proof of posting and to keep a copy of your 
 answers for your own records. 
